--- a/src/styles/components/_infos_bar.scss
+++ b/src/styles/components/_infos_bar.scss
@@ -1,3 +1,35 @@
 .infos-bar {
+    background-color: #ffff;
+    padding: 16px 24px;
     display: flex;
+    justify-content: space-between;
+    
+    &__list {
+        display: flex;
+        gap: 40px;
+
+        &__item {
+            font-size: 14px;
+            color: #000;
+
+            b {
+                display: block;
+                color: #000;
+                font-size: 18px;
+            }
+        }
+    }
+
+    // mobile
+    @media (max-width: 640px) {
+        display: block;
+
+        &__list {
+            display: block;
+        
+            &__item {
+                margin-bottom: 24px;
+            }
+        }
+    }
 }
